tdf#68118: Pass current document frame to SvxScriptSelectorDialog

... through MacroChooser
Without this, current document's macros library is unavailable in
"Assign" dialog

Change-Id: I83baa3b98858260eab61e8f4fefde3f9979c6d83