basctl/source/basicide/macrodlg.hxx
@@ -23,6 +23,8 @@
 #include <bastype2.hxx>
 #include <sfx2/basedlgs.hxx>
 
+#include "com/sun/star/frame/XFrame.hpp"
+
 #include <vcl/button.hxx>
 
 namespace basctl
@@ -50,7 +52,7 @@ private:
     VclPtr<FixedText>              m_pMacrosSaveInTxt;
     VclPtr<TreeListBox>            m_pBasicBox;
     VclPtr<FixedText>              m_pMacrosInTxt;
-    OUString                m_aMacrosInTxtBaseStr;
+    OUString                       m_aMacrosInTxtBaseStr;
     VclPtr<SvTreeListBox>          m_pMacroBox;
 
     VclPtr<PushButton>             m_pRunButton;
@@ -61,6 +63,9 @@ private:
     VclPtr<PushButton>             m_pOrganizeButton;
     VclPtr<PushButton>             m_pNewLibButton;
     VclPtr<PushButton>             m_pNewModButton;
+
+    // For forwarding to Assign dialog
+    ::css::uno::Reference< ::css::frame::XFrame > m_xDocumentFrame;
 
     bool                    bNewDelIsDel;
     bool                    bForceStoreBasic;
@@ -85,7 +90,7 @@ private:
     void                RestoreMacroDescription();
 
 public:
-                        MacroChooser( vcl::Window* pParent, bool bCreateEntries = true );
+                        MacroChooser( vcl::Window* pParent, const ::css::uno::Reference< ::css::frame::XFrame >& xDocFrame, bool bCreateEntries = true );
                         virtual ~MacroChooser() override;
     virtual void        dispose() override;
 
